--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
+    <header></header>
     <div id="content"></div>
     
 </body>
