--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Page</title>
-<script defer src="bundel.856ee01c6e47cb27c24d.js"></script></head>
+<script defer src="bundel.5301143072aafdd86300.js"></script></head>
 <body>
+    <header></header>
     <div id="content"></div>
     
 </body>
